--- a/src/index.twig
+++ b/src/index.twig
@@ -32,22 +32,6 @@
 "text": ["For new parents we follow the recommendations of the American Academy of Pediatric Dentistry - \"first visit by the first birthday\". Recognizing the short attention span of 1 year olds, Dr. Howard will perform an exam, demonstrate proper oral hygiene techniques, and discuss your child's eating, feeding, and oral habits with you."]
 },
 {
-"title": "Preventive Care",
-"titleFull": "Preventive Care",
-"image": "preventice.jpg",
-"modalTarget": "preventice",
-"text": ["Prevention is always better than treatment. Brush your teeth twice daily using any soft-bristled, ADA-approved tooth brush. We also recommend the use of modern electric tooth brushes such as Sonicare and Braun. Floss daily to remove plaque between teeth that you can't reach with regular brushing.",
-"Always rinse thoroughly with water after brushing (or after meals if you are unable to brush.) You may occasionally use a mouthwash to rinse. Children may benefit from the use of ACT fluoride rinse, to help prevent cavities from forming in between the teeth."]
-},
-{
-"title": "Child’s First Cleaning",
-"titleFull": "Child’s First Cleaning",
-"image": "exams.jpg",
-"modalTarget": "sedation",
-"text": ["We recommend a complete dental exam, a professional cleaning, and a topical fluoride application at 2 to 3 yrs of age. During this visit we allow extra time for your child to become acquainted with our staff and to inspect our facilities. By proceeding at a reasonable pace and explaining procedures in age appropriate terminology, most fears and anxieties are eliminated.",
-"We evaluate your child's brushing skills and correct any deficiencies. X-rays are not a routine part of our exam, and are only administered when further information is necessary to complete an accurate diagnosis."]
-},
-{
 "title": "Sealants and Fillings",
 "titleFull": "Sealants and Fillings",
 "image": "sealants-fillings.jpg",
@@ -56,40 +40,11 @@
 "Composite fillings are more than just attractive. They require minimal tooth preparation, in other words less healthy tooth structure is removed to restore the tooth. Also, a sealant can be placed over the remaining exposed grooves of the tooth to minimize the risk of decay on another area of the tooth."]
 },
 {
-"title": "Crowns",
-"titleFull": "Crowns",
-"image": "crowns.jpg",
-"modalTarget": "crowns",
-"text": ["A crown (often called a cap) covers the tooth and restores it to its original shape and size. Decay is removed and cleaned from the tooth and a preformed crown is placed over the tooth. Unlike adult crowns, in which the crown is made to fit the tooth, which requires two appointments, baby crowns are placed in one visit, because the tooth is prepared to fit the crown."]
-},
-{
-"title": "Space Maintainersg",
-"titleFull": "Space Maintainersg",
-"image": "space-maintainers.jpg",
-"modalTarget": "space",
-"text": ["When your child prematurely loses a baby tooth, the use of a space maintainer may be used. A space maintainer -- a combination of bands and wires designed to hold the remaining teeth in a position that will allow the future permanent tooth to erupt in the proper location."]
-},
-{
 "title": "Orthodontics",
 "titleFull": "Orthodontic Treatment",
 "image": "orthodontics.jpg",
 "modalTarget": "orthodontics",
 "text": ["Dr. Howard offers complete non-surgical orthodontic care for the pediatric and adolescent patient. As a pediatric dentist trained in orthodontics he is able to optimize the benefits of your child's growth and development by providing age appropriate interceptive orthodontic therapy in conjunction with your child's regular dental care. By intercepting developing occlusal problems early, we are able to improve eruption patterns and thereby minimize or eliminate any second phase of orthodontic therapy. Call today to schedule an orthodontic consultation."]
-},
-{
-"title": "Mouth Guards",
-"titleFull": "Mouth Guards",
-"image": "mouth-guards.jpg",
-"modalTarget": "guards",
-"text": ["We recommend mouth guards for all our sports active patients. A mouth protector minimizes the potential for tooth fracture or loss due to traumatic injury. In addition, it can reduce the concussive effects of certain head injuries.",
-"We provide custom-made pro-style mouth guards to all of our orthodontic patients free of charge during treatment."]
-},
-{
-"title": "Tooth Whitening",
-"titleFull": "Tooth Whitening",
-"image": "whitening.jpg",
-"modalTarget": "whitening",
-"text": ["Tooth whitening has become a cost effective and valuable tool in the creation of a beautiful smile. However, many patients experience unnecessary sensitivity and discomfort when whitening. Dr. Howard offers an affordable, comfortable, and customized whitening program which eliminates many of the discomforts and inconveniences associated with whitening."]
 },
 {
 "title": "Digital X-Rays",
@@ -100,12 +55,57 @@
 "Modern dental x-ray machines are very safe. We use only state-of-the-art, low radiation machines. The amount of radiation exposure your body receives on an airplane flight from Los Angeles to New York exceeds the amount of exposure you will receive from a modern dental x-ray machine. Contrast this minimal exposure with the risk of not finding an illness until it is too late, and you can see why we prescribe regular diagnostic x-rays."]
 },
 {
+"title": "Preventive Care",
+"titleFull": "Preventive Care",
+"image": "prevention.jpg",
+"modalTarget": "preventive",
+"text": ["Prevention is always better than treatment. Brush your teeth twice daily using any soft-bristled, ADA-approved tooth brush. We also recommend the use of modern electric tooth brushes such as Sonicare and Braun. Floss daily to remove plaque between teeth that you can't reach with regular brushing.",
+"Always rinse thoroughly with water after brushing (or after meals if you are unable to brush.) You may occasionally use a mouthwash to rinse. Children may benefit from the use of ACT fluoride rinse, to help prevent cavities from forming in between the teeth."]
+},
+{
+"title": "Crowns",
+"titleFull": "Crowns",
+"image": "crowns.jpg",
+"modalTarget": "crowns",
+"text": ["A crown (often called a cap) covers the tooth and restores it to its original shape and size. Decay is removed and cleaned from the tooth and a preformed crown is placed over the tooth. Unlike adult crowns, in which the crown is made to fit the tooth, which requires two appointments, baby crowns are placed in one visit, because the tooth is prepared to fit the crown."]
+},
+{
+"title": "Mouth Guards",
+"titleFull": "Mouth Guards",
+"image": "mouth-guards.jpg",
+"modalTarget": "guards",
+"text": ["We recommend mouth guards for all our sports active patients. A mouth protector minimizes the potential for tooth fracture or loss due to traumatic injury. In addition, it can reduce the concussive effects of certain head injuries.",
+"We provide custom-made pro-style mouth guards to all of our orthodontic patients free of charge during treatment."]
+},
+{
 "title": "Patient Comfort",
 "titleFull": "Patient Comfort",
 "image": "patient-comfort.jpg",
 "modalTarget": "comfort",
 "text": ["Dr. Jaha Howard's office was designed for infants, children and teens. Our facilities are designed to make kids feel right at home. It's a unique Jungle-themed atmosphere that helps children relax and enjoy their experience. Children deserve to experience a gentle, caring approach to their dental care.",
 "We offer nitrous oxide (laughing gas) for the slightly anxious child. An extremely safe option, nitrous oxide helps a child who is cooperative but worried about various aspects of their appointment. It helps alleviate anxiety about having instruments placed in the mouth."]
+},
+{
+"title": "Child’s First Cleaning",
+"titleFull": "Child’s First Cleaning",
+"image": "exams.jpg",
+"modalTarget": "sedation",
+"text": ["We recommend a complete dental exam, a professional cleaning, and a topical fluoride application at 2 to 3 yrs of age. During this visit we allow extra time for your child to become acquainted with our staff and to inspect our facilities. By proceeding at a reasonable pace and explaining procedures in age appropriate terminology, most fears and anxieties are eliminated.",
+"We evaluate your child's brushing skills and correct any deficiencies. X-rays are not a routine part of our exam, and are only administered when further information is necessary to complete an accurate diagnosis."]
+},
+{
+"title": "Space Maintainersg",
+"titleFull": "Space Maintainersg",
+"image": "space-maintainers.jpg",
+"modalTarget": "space",
+"text": ["When your child prematurely loses a baby tooth, the use of a space maintainer may be used. A space maintainer -- a combination of bands and wires designed to hold the remaining teeth in a position that will allow the future permanent tooth to erupt in the proper location."]
+},
+{
+"title": "Tooth Whitening",
+"titleFull": "Tooth Whitening",
+"image": "whitening.jpg",
+"modalTarget": "whitening",
+"text": ["Tooth whitening has become a cost effective and valuable tool in the creation of a beautiful smile. However, many patients experience unnecessary sensitivity and discomfort when whitening. Dr. Howard offers an affordable, comfortable, and customized whitening program which eliminates many of the discomforts and inconveniences associated with whitening."]
 },
 {
 "title": "Privacy Policy",
