--- a/src/scss/organisms/_services.scss
+++ b/src/scss/organisms/_services.scss
@@ -19,7 +19,7 @@
   .heading {
     text-align: center;
     h2 {
-      color: #5a710d;
+      color: #5E308B;
       margin-bottom: 10px;
       padding-top: $spacing-md;
       padding-bottom: $spacing-sm;
@@ -28,7 +28,7 @@
       line-height: 1.2;
       margin-bottom: 45px;
       a {
-        color: #5a710d;
+        color: #5E308B;
         text-decoration: underline;
       }
     }
@@ -36,18 +36,38 @@
 
   .pyramid-list {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-between;
-
+    height: 840px;
+    @media (min-width: 768px) {
+      height: 420px;
+    }
+    @media (min-width: 992px) {
+      height: 280px;
+    }
     &__item {
+      display: flex;
+      align-items: flex-end;
       width: 100%;
+      padding-bottom: 30px;
+      font-size: 17px;
       @media (min-width: 768px) {
         width: 45%;
       }
       @media (min-width: 992px) {
-        width: 30%;
+        width: 33%;
       }
     }
+      &__link {
+        text-decoration: underline;
+        color: #5e308b;
+        padding-left: 15px;
+        font-weight: 700;
+        font-size: 17px;
+        @media (min-width: 480px) {
+          font-size: 20px;
+        }
+      }
   }
 }
