--- a/src/scss/atoms/_google-map.scss
+++ b/src/scss/atoms/_google-map.scss
@@ -1,12 +1,15 @@
 #google-map5 {
   height: 200px;
-  @media (min-width: $width-sm) {
+  @media (min-width: $width-xs) {
     height:250px;
   }
+  @media (min-width: $width-sm) {
+    height:350px;
+  }
   @media (min-width: $width-md) {
-    height: 350px;
+    height: 770px;
   }
   @media (min-width: $width-lg) {
-    height: 734px;
+    height: 800px;
   }
 }
