--- a/src/templates/organisms/reviews.twig
+++ b/src/templates/organisms/reviews.twig
@@ -3,15 +3,18 @@
         <div class="row">
             <div class="col-sm-12 center">
                 <div class="heading">
-                    <h2>What Our Patients <br>Are Saying About Us</h2>
+                    <h2>See What Parents Are Saying</h2>
                 </div>
-                <div id="bf-revz-widget-{{ birdeye }}" style="-webkit-overflow-scrolling:touch;">
-                    <div class="bf-dv"><span class="bf-spn">reviews powered by <a class="bf-pro" href="http://www.tysonsteele.com/" target="_blank">Tyson Steele Associates</a></span></div>
+                <div class="review-carousel--wrapper">
+                    {% include 'molecules/review-carousel__pyramid.twig' %}
                 </div>
+                {#<div id="bf-revz-widget-{{ birdeye }}" style="-webkit-overflow-scrolling:touch;">#}
+                    {#<div class="bf-dv"><span class="bf-spn">reviews powered by <a class="bf-pro" href="http://www.tysonsteele.com/" target="_blank">Tyson Steele Associates</a></span></div>#}
+                {#</div>#}
             </div>
         </div>
     </div>
-    <!--<div class="mobile-image hidden-lg hidden-md hidden-sm">-->
-    <!--<img src="/assets/reviews-bg.jpeg" alt="Happy Couple with nice teeth">-->
-    <!--</div>-->
+    {#<!--<div class="mobile-image hidden-lg hidden-md hidden-sm">-->#}
+    {#<!--<img src="/assets/reviews-bg.jpeg" alt="Happy Couple with nice teeth">-->#}
+    {#<!--</div>-->#}
 </section>
